Signed-off-by: yirose

--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,13 @@
     <artifactId>jackson-databind</artifactId>
     <version>2.9.0</version>
 </dependency>	
-		<!-- 2017-11-13 -->
+
+<!-- 引入JSR303校验  jackson包 -->
+<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-validator -->
+<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-validator</artifactId>
+    <version>5.4.1.Final</version>
+</dependency>
 	</dependencies>
 </project>
