--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,7 +55,25 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
-	<!-- 4: 使用Rest风格URL ，将页面普通的post请求转换为指定的delete或者put请求 -->
+		<!--
+		4：配置shiro 的shiroFilter
+		4.1：DelegatingFilterProxy实际上是Filter的一个代理，默认情况下，Spring 回到 IOC 容器中 查找和
+		<filter-name>对应的Filter bean， 也可以通过targetBeanName 的初始化参数来配置Filter bean的 id 。
+		
+		<filter>
+		<filter-name>shiroFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetFilterLifecycle</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>-->
+
+	<!-- 5： 使用Rest风格URL ，将页面普通的post请求转换为指定的delete或者put请求 -->
 	<filter>
 		<filter-name>HiddenHttpMethodFilter</filter-name>
 		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
@@ -64,7 +82,8 @@
 		<filter-name>HiddenHttpMethodFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	<!-- PUT 过滤器 -->
+	
+	<!--6： PUT 过滤器 -->
 	<filter>
 		<filter-name>HttpPutFormContentFilter</filter-name>
 		<filter-class>org.springframework.web.filter.HttpPutFormContentFilter</filter-class>
