--- a/src/main/resources/dbconfig.properties
+++ b/src/main/resources/dbconfig.properties
@@ -1,4 +1,4 @@
-db.url = jdbc:mysql://localhost:3306/ssm-crud?characterEncoding=utf8
+db.url = jdbc:mysql://192.168.1.198:3306/ssm-crud?characterEncoding=utf8
 db.driver = com.mysql.jdbc.Driver
 db.user = root
-db.password = 
+db.password = rootOz@2016d
